# Apache-Airflow-Best-Practices

./: README.md
Chapter 5: Basics of Airflow and DAG Authoring/terraform/: main.tf
chapter-04/dags/: etl_asod.py
chapter-04/space_imags/.astro/: config.yaml
chapter-04/space_imags/dags/: etl_asod.py
chapter-05/dags/: email-example.py  slack_example.py  test_airflow_connection.py  test_secret_store_connection.py
chapter-05/space_imags/notebooks/: Chapter_5_Example.ipynb
chapter-06/: .gitignore  .pre-commit-config.yaml
chapter-06/dags/: example_dag.py
chapter-07/.angreal/: angreal.toml
chapter-07/airflow-provider-tea-pot/.angreal/: task_demo.py
chapter-07/dags/example_dag/: __init__.py
chapter-07/dev/: docker-compose.yaml
chapter-08/.angreal/: init.py
chapter-08/airflow-provider-tea-pot/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  setup.cfg
chapter-08/airflow-provider-tea-pot/.angreal/: angreal.toml  init.py  task_demo.py  task_setup.py  task_tests.py
chapter-08/airflow-provider-tea-pot/airflow_provider_tea_pot/: __init__.py  provider.py
chapter-08/airflow-provider-tea-pot/airflow_provider_tea_pot/hooks/: __init__.py
chapter-08/airflow-provider-tea-pot/airflow_provider_tea_pot/operators/: __init__.py
chapter-08/airflow-provider-tea-pot/airflow_provider_tea_pot/sensors/: __init__.py
chapter-08/airflow-provider-tea-pot/airflow_provider_tea_pot/triggers/: __init__.py
chapter-08/airflow-provider-tea-pot/dev/: Dockerfile  docker-compose.yaml
chapter-08/airflow-provider-tea-pot/dev/mocks/: awake.yaml  brew_coffee.yaml  makes_tea.yaml  water_level.yaml
chapter-08/airflow-provider-tea-pot/example_dags/: example_dag.py
chapter-08/airflow-provider-tea-pot/tests/: conftest.py
chapter-08/airflow-provider-tea-pot/tests/unit/: test_hooks.py  test_operator.py  test_sensor.py  test_triggers.py
chapter-08/airflow-provider-tea-pot/tests/unit/hooks/: test__init__.py
chapter-08/airflow-provider-tea-pot/tests/unit/operators/: test__init__.py
chapter-08/airflow-provider-tea-pot/tests/unit/sensors/: test__init__.py
chapter-08/airflow-provider-tea-pot/tests/unit/triggers/: test__init__.py
chapter-08/dev/: Dockerfile
chapter-08/ml-example/: .gitignore  README.md
chapter-08/ml-example/.angreal/: task_demo.py
chapter-08/ml-example/notebooks/: 01-CollborativeFiltering-Copy1.ipynb
chapter-08/plugins/metrics_plugin/: __init__.py
chapter-09/.angreal/: angreal.toml  task_demo.py
chapter-09/dags/: test_case_dag_writer.py
chapter-09/dev/cron-job/: Dockerfile  load_data.py
chapter-09/ml-example/.angreal/: init.py
chapter-09/ml-example/dev/: Dockerfile
chapter-10/.angreal/: task_demo.py  task_tests.py
chapter-10/dags/: e2e_test_generator.py  example_dag.py  test_case_dag_writer.py
chapter-10/dags/dag_generator/: __init__.py
chapter-10/dev/: Dockerfile  docker-compose.yaml
chapter-10/dev/cron-job/: crontab
chapter-10/ml-example/: README.md  dev_requirements.txt  requirements.txt
chapter-10/ml-example/.angreal/: angreal.toml  task_demo.py
chapter-10/ml-example/dags/: example_dag.py  recsys_dag.py
chapter-10/ml-example/dev/: Dockerfile  docker-compose.yaml  env_vars.txt
chapter-10/ml-example/notebooks/: 01-CollborativeFiltering-Copy1.ipynb  02-NeuralCollaborativeFiltering.ipynb
chapter-10/tests/: conftest.py
chapter-12/.angreal/: init.py  task_demo.py
chapter-12/dags/admin_dags/: example_dag.py
chapter-12/dev/: docker-compose.yaml
chapter-13/: dev_requirements.txt
chapter-13/.angreal/: init.py  task_setup.py
chapter-13/dags/admin_dags/: example_dag.py
chapter-13/dags/user_1/: example_dag.py
chapter-13/dev/: Dockerfile  docker-compose.yaml
(+12 files in other folders)
