[metadata]

name = airflow-provider-tea-pot
version = attr: airflow_provider_tea_pot.__version__
url = https://github.com/airflow-provider-tea-pot
author = Osborne Reynolds
author_email = osborne.reynolds@airflow.com
description = A provider for something short and stout.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code=https://github.com/username_or_org/airflow-provider-tea-pot
    Homepage=https://github.com/username_or_org/airflow-provider-tea-pot
    Changelog=https://github.com/username_or_org/airflow-provider-tea-pot/blob/main/CHANGELOG.md


[options]
python_requires = >=3.7
packages = find:
install_package_data = true
install_requires =
    apache-airflow>=2.0.0
zip_safe=False

[options.extras_require]
dev =
    mypy
    pytest
    pytest-cov
    pre-commit
    build
    angreal>=2.0.0

[options.packages.find]
include =
    airflow_provider_tea_pot*

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True

[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"
