[metadata]

name = airflow-provider-tea-pot
version = attr: airflow_provider_tea_pot.__version__
url =
author = Osborne Reynolds
author_email = osborne.reynolds@airflow.com
description = Short and stout.
long_description = file: README.md
long_description_content_type = text/markdown
license =
license_files = LICENSE.txt
classifiers =
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code=
    Homepage=
    Changelog=


[options]
python_requires = >=3.7
packages = find:
install_package_data = true
install_requires =
    apache-airflow>=2.5.0
    asgiref
zip_safe=False

[options.extras_require]
dev =
    mypy
    pytest
    pytest-cov
    pre-commit
    build
    angreal>=2.1

[options.entry_points]
apache_airflow_provider=
  provider_info=airflow_provider_tea_pot.provider:get_provider_info


[options.packages.find]
include =
    airflow_provider_tea_pot*

[tool:pytest]
testpaths = tests
addopts = --tb=short

[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True

[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"
